Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-861

Debugging with cdb shows contradictory values

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 1.2.90, Qt Creator 1.3.0, Qt Creator 1.3.1, Qt Creator 1.3.81 (2.0.0-alpha), Qt Creator 1.3.83 (2.0.0-beta)
    • Debugger
    • None
    • Windows Vista 64, cdb 6.11.0001.404 X86
    • 938dedbac0ccd13232d994ec23c4e37a25c1249b,
        bb35660c40f576274d28df516c346ba2f2fc6af8

    Description

      I opened qtcreator.pro in Creator and started debugging it to investigate QTCREATORBUG-858.
      In the debugged Creator, I follow the instructions from there until it crashes.
      The debugging Creator shows me the stacktrace which led to the crash, but:
      In Launcher::logMessage, the locals view does not show the this pointer.
      Going to Launcher::handleSupportMask, it doesn't show the this pointer either.
      Going back to Launcher::logMessage it shows a this pointer, e.g. 0x00000008
      Then going to Launcher::handleSupportMask again, it shows a different value for this, e.g. 0x0dffd540, although it is the same object.

      qDebug() added to these functions shows the same value for this in both functions. The value shown in Launcher::logMessage is wrong while the other one is correct.

      When I debug Creator directly with command-line cdb, the values are equal, too. See attachment.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes