Debugger [CDB]: Values missing in locals view. Task-number: QTCREATORBUG-861

Account for internal dumpers expanding children when reading out
SymbolGroupContext.